--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   database: devinsantos_development
   pool: 5
   username: root
-  password:
+  password: devx
   socket: /var/run/mysqld/mysqld.sock
 
 # Warning: The database defined as "test" will be erased and
@@ -25,7 +25,7 @@ test:
   database: devinsantos_test
   pool: 5
   username: root
-  password:
+  password: devx
   socket: /var/run/mysqld/mysqld.sock
 
 production:
@@ -35,6 +35,6 @@ production:
   database: devinsantos_production
   pool: 5
   username: root
-  password:
+  password: devx
   socket: /var/run/mysqld/mysqld.sock
 
