--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,3 @@
-# MySQL.  Versions 4.1 and 5.0 are recommended.
-#
-# Install the MySQL driver:
-#   gem install mysql2
-#
-# And be sure to use new-style password hashing:
-#   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
   adapter: mysql2
   encoding: utf8
@@ -12,12 +5,10 @@ development:
   database: devinsantos_development
   pool: 5
   username: root
-  password: devx
-  socket: /var/run/mysqld/mysqld.sock
+  password:
+  host: localhost
+#  socket: /var/run/mysqld/mysqld.sock
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: mysql2
   encoding: utf8
@@ -25,8 +16,9 @@ test:
   database: devinsantos_test
   pool: 5
   username: root
-  password: devx
-  socket: /var/run/mysqld/mysqld.sock
+  password:
+  host: localhost
+#  socket: /var/run/mysqld/mysqld.sock
 
 production:
   adapter: mysql2
@@ -35,6 +27,6 @@ production:
   database: devinsantos_production
   pool: 5
   username: root
-  password: devx
-  socket: /var/run/mysqld/mysqld.sock
+  password:
+#  socket: /var/run/mysqld/mysqld.sock
 
