Gitignore   Removido .rvmrc - Deve estar em .git/info/exclude, rvm pertence ao ambiente não a app.   Adicionado config/database.yml - Cada um tem sua configuração de banco.   Adicionado *.swp e *.swo - arquivos swap.

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 db/*.sqlite3
 log/*.log
 tmp/
-.rvmrc
-nbproject/
-Gemfile.lock
-
+nbproject/*
+coverage/*
+*.swp
+*.swo
+.DS_Store
+config/database.yml
